--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pytz>=2025.2",
     "streamlit>=1.45.0",
+    firebase-admin>=6.2.0,
+    pyrebase4>=4.7.1,
+    requests>=2.31.0,
 ]
