--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pandas>=2.2.3
 openpyxl>=3.1.5
 pytz>=2025.2
 ipaddress>=1.0.23
-firebase-admin>=6.2.0
-pyrebase4>=4.7.1
-requests>=2.31.0
+firebase-admin==6.2.0
+pyrebase4==4.7.1
+requests==2.31.0
