--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+streamlit>=1.45.0
+pandas>=2.2.3
+openpyxl>=3.1.5
+pytz>=2025.2
+ipaddress>=1.0.23
+
 firebase-admin==6.2.0
+setuptools==69.2.0
 pyrebase4==4.7.1
 requests==2.29.0
+gcloud==0.18.3
