--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ pyrebase4==4.7.1
 requests==2.29.0
 gcloud==0.18.3
 qrcode==8.2.0
+opencv-python==4.11.0.86
+pyzbar==0.1.9
+pillow==11.2.1
+numpy>=1.24.0
