--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ requests==2.29.0
 gcloud==0.18.3
 qrcode==8.2.0
 opencv-python==4.11.0.86
-pyzbar==0.1.9
 pillow==11.2.1
 numpy>=1.24.0
+opencv-python-headless
+pyzbar
