--- a/.gitignore
+++ b/.gitignore
@@ -132,8 +132,8 @@ ENV/
 env.bak/
 venv.bak/
 archive/
-.streamlit
 .streamlit/
+.streamlit/secrets.toml
 
 # Spyder project settings
 .spyderproject
